--- a/core_java/grep/pom.xml
+++ b/core_java/grep/pom.xml
@@ -14,5 +14,10 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.28</version>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.12</version>
+    </dependency>
   </dependencies>
 </project>
